[gd_scene load_steps=10 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://Interface/TitleScreen.png" type="Texture" id=2]
[ext_resource path="res://Interface/TitleName.png" type="Texture" id=3]
[ext_resource path="res://Interface/TitlePlay.png" type="Texture" id=4]
[ext_resource path="res://Interface/TitlePlay_hovered.png" type="Texture" id=5]
[ext_resource path="res://Interface/TitleExit.png" type="Texture" id=6]
[ext_resource path="res://Interface/TitleExit_hovered.png" type="Texture" id=7]
[ext_resource path="res://KinematicBody2D.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 540.251 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 618.0
margin_top = 20.0
margin_right = 1301.0
margin_bottom = 1060.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="Title" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 683.0
margin_bottom = 201.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 217.0
margin_right = 683.0
margin_bottom = 623.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 683.0
margin_bottom = 201.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 683.0
margin_bottom = 406.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Area2D" type="KinematicBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 526.025, 478.204 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1394.96, 475.871 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 839.773, 773.291 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 960.064, 142.23 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 648.22, 434.619 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]

[editable path="KinematicBody2D"]
